[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/power ups/feather.png" type="Texture" id=1]
[ext_resource path="res://levels/power ups/wing.gd" type="Script" id=2]
[ext_resource path="res://sound/pickup.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.5447
height = 76.2186

[node name="wing" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
z_index = -1
z_as_relative = false
collision_layer = 2147483656
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 2.30383
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_wing_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="audio" to="." method="_on_AudioStreamPlayer2D_finished"]
